# Nahid-Dictionary

./: .gitignore  CMakeLists.txt  Dictionary.pro  Dictionary.pro.user.0850b34  Dictionary.pro.user.59c3200  Dictionary.pro.user.ed3d97f  README.md  Resources.qrc  dictionaryFa.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  phonetics.json
